# mdanki

./: CLAUDE.md  README.md  pyproject.toml
examples/languages/: spanish.md
examples/math/: calculus.md  physics.md
examples/programming/javascript/: basics.md
examples/programming/python/: basics.md
src/mdanki/: anki.py  cli.py  parser.py  render.py  sync.py
tests/: test.md  test_parser.py  test_render.py  test_sync.py
